--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "firebase": "^9.19.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
+    "state-pool": "^0.9.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
